# pedit

./: .gitignore  CMakeLists.txt  README.md  resources.qrc
panda-note/: CMakeLists.txt
src/: confighelper.cpp  confighelper.h  main.cpp  mainwindow.cpp  mainwindow.h  ptextedit.cpp  ptextedit.h  settingswindow.cpp  settingswindow.h
